fix(nav): fix navbar menu alignment

--- a/src/components/NavBar/Menu.module.css
+++ b/src/components/NavBar/Menu.module.css
@@ -34,7 +34,7 @@
   .item {
     height: 2.75rem;
     justify-content: flex-start;
-    padding: 1rem 3.5rem;
+    padding: 1rem 0 1rem 4.5rem;
   }
 
   .icon {
